[gd_scene load_steps=11 format=3 uid="uid://ce1m58qjueml4"]

[ext_resource type="Script" path="res://Scripts/Characters/Enemies/GlaringTerror.gd" id="1_xcayn"]
[ext_resource type="PackedScene" uid="uid://deo66nfs8pl5n" path="res://Scenes/Interaction/InteractionArea/InteractionArea.tscn" id="3_ci7l7"]
[ext_resource type="Texture2D" uid="uid://dbevq22f6lqqn" path="res://Assets/Lights/EnemySight.png" id="4_4gaxo"]
[ext_resource type="Texture2D" uid="uid://cangidl6vciyv" path="res://Assets/Characters/Enemies/EyeShut.webp" id="4_uqh8j"]
[ext_resource type="Texture2D" uid="uid://cr6gqrfmb5ird" path="res://Assets/Characters/Enemies/GlaringTerror/EyeBackground.png" id="6_hvcq5"]
[ext_resource type="Texture2D" uid="uid://b126q4kv3srmy" path="res://Assets/Characters/Enemies/GlaringTerror/Pupil.png" id="7_ubrjb"]
[ext_resource type="Texture2D" uid="uid://dmy72sa6rd337" path="res://Assets/Characters/Enemies/GlaringTerror/EyeForeground.png" id="8_1noko"]

[sub_resource type="CircleShape2D" id="CircleShape2D_62mib"]
radius = 23.0

[sub_resource type="CircleShape2D" id="CircleShape2D_25duf"]
radius = 36.2353

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4nm54"]
light_mode = 1

[node name="GlaringTerror" type="Node2D" groups=["Eye"]]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_xcayn")
ActivatedTexture = ExtResource("8_1noko")
DeactivatedTexture = ExtResource("4_uqh8j")

[node name="Collision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
shape = SubResource("CircleShape2D_62mib")

[node name="DeathRay" type="Area2D" parent="Collision"]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collision/DeathRay"]
polygon = PackedVector2Array(240, 48, 240, -48, 2, 0)

[node name="InteractionArea" parent="." instance=ExtResource("3_ci7l7")]
ActionName = "Poke out"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_25duf")
debug_color = Color(1, 0, 0, 0.419608)

[node name="Lights" type="Node2D" parent="."]
visible = false

[node name="ShadowLight" type="PointLight2D" parent="Lights"]
modulate = Color(1, 0, 0, 1)
color = Color(1, 0.357326, 0.290208, 1)
energy = 0.5
shadow_enabled = true
shadow_filter = 2
texture = ExtResource("4_4gaxo")
texture_scale = 0.5

[node name="LOSLight" type="PointLight2D" parent="Lights"]
modulate = Color(1, 0, 0, 1)
color = Color(1, 0.357326, 0.290208, 1)
blend_mode = 2
range_item_cull_mask = 4
shadow_enabled = true
shadow_filter = 2
shadow_item_cull_mask = 2
texture = ExtResource("4_4gaxo")
texture_scale = 0.5

[node name="PointLight2D" type="PointLight2D" parent="Lights"]
modulate = Color(1, 0, 0, 1)
color = Color(1, 0.357326, 0.290208, 1)
energy = 0.75
shadow_filter = 2
texture = ExtResource("4_4gaxo")
texture_scale = 0.5

[node name="BackgroundSprite" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_4nm54")
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_hvcq5")

[node name="EyeSprite" type="Sprite2D" parent="."]
z_index = 2
material = SubResource("CanvasItemMaterial_4nm54")
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_1noko")
flip_h = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="PupilOffset" type="Node2D" parent="."]

[node name="PupilSprite" type="Sprite2D" parent="PupilOffset"]
z_index = 1
material = SubResource("CanvasItemMaterial_4nm54")
position = Vector2(4, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_ubrjb")

[connection signal="body_entered" from="Collision/DeathRay" to="." method="_on_death_ray_body_entered"]
[connection signal="body_exited" from="Collision/DeathRay" to="." method="_on_death_ray_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
